<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/textLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <EditText
            android:id="@+id/editText"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat"
            android:inputType="text"
            android:cursorVisible="false"
            android:enabled="false"
            android:textCursorDrawable="@color/black"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textLayout"
        android:background="@color/black">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

           <Button
               android:id="@+id/button1"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/_1"
               android:textSize="25sp" />

           <Button
               android:id="@+id/button2"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/_2"
               android:textSize="25sp"/>

           <Button
               android:id="@+id/button3"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/_3"
               android:textSize="25sp"/>

           <Button
               android:id="@+id/buttonDel"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/del"
               android:textSize="20sp"/>

           <Button
               android:id="@+id/buttonFind"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/find"
               android:textSize="20sp"/>

       </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="25sp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/buttonDivision"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/division"
                android:textSize="25dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonLeftBracket"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/leftBrackets"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/buttonRightBracket"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rightBracket"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/buttonSQR"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/degree"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/point"
                android:textSize="25sp"/>

        </TableRow>

    </TableLayout>

</RelativeLayout>